trustfall_core/test_data/tests/parse_errors/filter_with_value_instead_of_array.parse-error.ron
Err(InappropriateTypeForDirectiveArgument("@filter", "value", Pos(
  line: 4,
  column: 39,
)))
